@startuml ""


class Book {
    - String ISB;
    - String title;
    - date publicaion;
    - boolean available;
    - int stock;
    - Publisher publisher;
    - Category category;
}



class Category {
    - int ID;
    - String name;
    - List<Book> books;
}


class Publisher {
    - int ID;
    - String name;
    - List<Book> books;
}


class Client {
    - int ID;
    - String name;
    - String address;
    - String phoneNumber;
    - List<Loan> loans;

}

class Loan {
    - int ID;
    - int quantity;
    - date dateLoan;
    - date dateReturn;
    - Client client;
    - List<Book> books;

}

class Reservation {
    - int ID;
    - int quantity;
    - date dateReservation;
    - Client client;
    - Book book;
}

class BookLoan {
    - Loan loan;
    - Book book;
}


' relatioships

Book "*" -- "1" Publisher: do
Book "*" -- "1" Category: contain
Book "*" -- "*" Loan: contain
(Book, Loan) .. BookLoan
Loan "*" -- "1" Client: do
Reservation "1" -- "1" Client: do
Reservation "1" -- "1" Book: contain



@enduml